force-app/main/default/objects/WT_Wear_Test__c/WT_Wear_Test__c.object-meta.xml
<CustomObject>
    <description>Junction object linking Wear Tests and Test Products.
Wear Tests are composed of different Styles/Products that are to be tested, this object houses information about each product test (product information is in the Product object).
This object will contain all of the testers associated with the product test.</description>
    <label>Wear Test</label>
    <nameField>
        <label>Wear Test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wear Tests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>