force-app/main/default/objects/WT_Wear_Test__c/fields/Actual_PO_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_PO_Date__c</fullName>
    <label>Actual PO Date</label>
    <type>Date</type>
</CustomField>