force-app/main/default/objects/WT_Wear_Test__c/fields/Amortization_Capital__c.field-meta.xml
<CustomField>
    <fullName>Amortization_Capital__c</fullName>
    <label>Amortization/Capital</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>