force-app/main/default/objects/WT_Wear_Test__c/fields/ASTM_or_EN_Results__c.field-meta.xml
<CustomField>
    <fullName>ASTM_or_EN_Results__c</fullName>
    <label>ASTM or EN Results</label>
    <length>255</length>
    <type>Text</type>
</CustomField>