force-app/main/default/objects/WT_Wear_Test__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description>Allows users to categorize a test by brand.</description>
    <inlineHelpText>Allows users to categorize a test by brand.</inlineHelpText>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Red Wing</fullName>
            </value>
            <value>
                <fullName>Irish Setter Work</fullName>
            </value>
            <value>
                <fullName>WORX</fullName>
            </value>
            <value>
                <fullName>Irish Setter Hunt</fullName>
            </value>
            <value>
                <fullName>Men&apos;s Herritage</fullName>
            </value>
            <value>
                <fullName>Women&apos;s Herritage</fullName>
            </value>
            <value>
                <fullName>Vasque</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>