force-app/main/default/objects/WT_Wear_Test__c/fields/Capacity_Check_CB_DP__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Check_CB_DP__c</fullName>
    <label>Capacity Check (CB &amp; DP)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>