force-app/main/default/objects/WT_Wear_Test__c/fields/Days_in_Process__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Process__c</fullName>
    <label>Days in Process</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>