force-app/main/default/objects/WT_Wear_Test__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>How long the test has been going. Today minus Test Start Date</description>
    <formula>Today() - Test_Start_Date__c</formula>
    <inlineHelpText>How long the test has been going. Today minus Test Start Date</inlineHelpText>
    <label>Duration (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>