force-app/main/default/objects/WT_Wear_Test__c/fields/Extreme_Wear_Fit__c.field-meta.xml
<CustomField>
    <fullName>Extreme_Wear_Fit__c</fullName>
    <label>Extreme/Wear Fit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Need to order</fullName>
            </value>
            <value>
                <fullName>On order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>