force-app/main/default/objects/WT_Wear_Test__c/fields/Final_Test_Comments__c.field-meta.xml
<CustomField>
    <fullName>Final_Test_Comments__c</fullName>
    <description>Comments about each Wear Test Product</description>
    <inlineHelpText>Comments about the Wear Test Product.</inlineHelpText>
    <label>Final Test Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>