force-app/main/default/objects/WT_Wear_Test__c/fields/Initial_Fit_Test__c.field-meta.xml
<CustomField>
    <fullName>Initial_Fit_Test__c</fullName>
    <label>Initial Fit Test</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Action Plan</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>Retest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>