force-app/main/default/objects/WT_Wear_Test__c/fields/Initial_Prototype__c.field-meta.xml
<CustomField>
    <fullName>Initial_Prototype__c</fullName>
    <label>Initial Prototype</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Being Built</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Need to order</fullName>
            </value>
            <value>
                <fullName>On Order</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>