force-app/main/default/objects/WT_Wear_Test__c/fields/Materials_Testing__c.field-meta.xml
<CustomField>
    <fullName>Materials_Testing__c</fullName>
    <label>Materials Testing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All Approved</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Need to order</fullName>
            </value>
            <value>
                <fullName>Some in testing, some yet to come</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>