force-app/main/default/objects/WT_Wear_Test__c/fields/Materials_with_Long_Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>Materials_with_Long_Lead_Time__c</fullName>
    <label>Materials with Long Lead Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cordura</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>