force-app/main/default/objects/WT_Wear_Test__c/fields/Number_of_Participants__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Participants__c</fullName>
    <description>Updated from Number of Testers.</description>
    <label>Number of Participants</label>
    <summaryForeignKey>WT_Wear_Test_Participant__c.Wear_Test__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>