force-app/main/default/objects/WT_Wear_Test__c/fields/One_Month_Fit__c.field-meta.xml
<CustomField>
    <fullName>One_Month_Fit__c</fullName>
    <label>1 Month Fit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Action Plan</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>Retest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>