force-app/main/default/objects/WT_Wear_Test__c/fields/Photo_Samples__c.field-meta.xml
<CustomField>
    <fullName>Photo_Samples__c</fullName>
    <label>Photo Samples</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Need to order</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>