force-app/main/default/objects/WT_Wear_Test__c/fields/RFP_Date__c.field-meta.xml
<CustomField>
    <fullName>RFP_Date__c</fullName>
    <label>RFP Date</label>
    <type>Date</type>
</CustomField>