force-app/main/default/objects/WT_Wear_Test__c/fields/RFP_Date_Is_EFP_ed__c.field-meta.xml
<CustomField>
    <fullName>RFP_Date_Is_EFP_ed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RFP Date - Is EFP&apos;ed?</label>
    <type>Checkbox</type>
</CustomField>