force-app/main/default/objects/WT_Wear_Test__c/fields/Salesmen_Samples__c.field-meta.xml
<CustomField>
    <fullName>Salesmen_Samples__c</fullName>
    <label>Salesmen Samples</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Need to Order</fullName>
            </value>
            <value>
                <fullName>On Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>