force-app/main/default/objects/WT_Wear_Test__c/fields/Salesmen_Samples_On_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Salesmen_Samples_On_Order_Date__c</fullName>
    <description>Date associated with the Salesmen Samples field. If Salesmen Samples is On Order, a date can be entered.</description>
    <inlineHelpText>Date associated with the Salesmen Samples field.</inlineHelpText>
    <label>Salesmen Samples On Order Date</label>
    <type>Date</type>
</CustomField>