force-app/main/default/objects/WT_Wear_Test__c/fields/Schedule_My_Check_in_Reminders__c.field-meta.xml
<CustomField>
    <fullName>Schedule_My_Check_in_Reminders__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A checkbox field to trigger scheduling the “check-in” reminders</description>
    <inlineHelpText>A checkbox field to trigger scheduling the “check-in” reminders</inlineHelpText>
    <label>Schedule My Check-in Reminders</label>
    <type>Checkbox</type>
</CustomField>