force-app/main/default/objects/WT_Wear_Test__c/fields/Season__c.field-meta.xml
<CustomField>
    <fullName>Season__c</fullName>
    <description>Allows test to be assigned to a season.</description>
    <inlineHelpText>Allows test to be assigned to a season.</inlineHelpText>
    <label>Season</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Spring</fullName>
            </value>
            <value>
                <fullName>Summer</fullName>
            </value>
            <value>
                <fullName>Fall</fullName>
            </value>
            <value>
                <fullName>Winter</fullName>
            </value>
            <value>
                <fullName>Spring/Summer</fullName>
            </value>
            <value>
                <fullName>Fall/Winter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>