force-app/main/default/objects/WT_Wear_Test__c/fields/SP_Foot_Leather_Yes_No__c.field-meta.xml
<CustomField>
    <fullName>SP_Foot_Leather_Yes_No__c</fullName>
    <label>SP Foot Leather (Yes/No)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>