force-app/main/default/objects/WT_Wear_Test__c/fields/Target_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Target_Delivery__c</fullName>
    <label>Target Delivery</label>
    <type>Date</type>
</CustomField>