force-app/main/default/objects/WT_Wear_Test__c/fields/Test_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Test_End_Date__c</fullName>
    <description>The end date of the Wear Test Product</description>
    <inlineHelpText>The end date of the test.</inlineHelpText>
    <label>Test End Date</label>
    <type>Date</type>
</CustomField>