force-app/main/default/objects/WT_Wear_Test__c/fields/Test_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Test_Start_Date__c</fullName>
    <description>The start date of the Wear Test with Product</description>
    <inlineHelpText>The start date of the test.</inlineHelpText>
    <label>Test Start Date</label>
    <type>Date</type>
</CustomField>