force-app/main/default/objects/WT_Wear_Test__c/fields/Test_Status__c.field-meta.xml
<CustomField>
    <fullName>Test_Status__c</fullName>
    <description>Allows the user to set the status of the Wear Test.</description>
    <inlineHelpText>Allows the user to set the status of the Wear Test.</inlineHelpText>
    <label>Final Test Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>