force-app/main/default/objects/WT_Wear_Test__c/fields/Test_Style__c.field-meta.xml
<CustomField>
    <fullName>Test_Style__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Field establishing a lookup to the Test Product object. (Unable to set up a junction object or a master-detail relationship due to two other M-D relationships on the object.)
Formerly Test Product</description>
    <inlineHelpText>Link to the Test Style (formerly known as a Style in WEATT)</inlineHelpText>
    <label>Test Style</label>
    <referenceTo>WT_Style__c</referenceTo>
    <relationshipLabel>Wear Tests</relationshipLabel>
    <relationshipName>Wear_Test_Products</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>