force-app/main/default/objects/WT_Wear_Test__c/fields/Type_of_Test__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Test__c</fullName>
    <description>How long the test is expected to last.</description>
    <inlineHelpText>How long the test is expected to last.</inlineHelpText>
    <label>Type of Test</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>40 hours / 1 week</fullName>
            </value>
            <value>
                <fullName>1 month</fullName>
            </value>
            <value>
                <fullName>3 months</fullName>
            </value>
            <value>
                <fullName>6 months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>