force-app/main/default/objects/WT_Wear_Test__c/fields/W_P_Testing__c.field-meta.xml
<CustomField>
    <fullName>W_P_Testing__c</fullName>
    <label>W/P Testing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Need to order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>