force-app/main/default/objects/WT_Wear_Test__c/fields/Wear_Test_Number__c.field-meta.xml
<CustomField>
    <fullName>Wear_Test_Number__c</fullName>
    <description>An identifying number for each Wear Test Product</description>
    <inlineHelpText>The identifying number of a test.</inlineHelpText>
    <label>Wear Test Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>