force-app/main/default/objects/WT_Wear_Test__c/fields/WT_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>WT_Project_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup field to the Project Name object</description>
    <inlineHelpText>Allows Wear Tests to be assigned to a Project record</inlineHelpText>
    <label>Project Name</label>
    <referenceTo>WT_Project_Name__c</referenceTo>
    <relationshipLabel>Wear Tests (Projects)</relationshipLabel>
    <relationshipName>WT_Project_Wear_Tests</relationshipName>
    <type>Lookup</type>
</CustomField>