force-app/main/default/objects/WT_Wear_Test__c/fields/X_Factory_Date__c.field-meta.xml
<CustomField>
    <fullName>X_Factory_Date__c</fullName>
    <label>X-Factory Date</label>
    <type>Date</type>
</CustomField>