force-app/main/default/objects/WT_Wear_Test__c/recordTypes/Garment_Wear_Test.recordType-meta.xml
<RecordType>
    <fullName>Garment_Wear_Test</fullName>
    <active>true</active>
    <description>Garment team test record type</description>
    <label>Garment - Wear Test</label>
</RecordType>