force-app/main/default/objects/WT_Wear_Test__c/recordTypes/Vasque_Wear_Test.recordType-meta.xml
<RecordType>
    <fullName>Vasque_Wear_Test</fullName>
    <active>true</active>
    <description>Vasque team test record type</description>
    <label>Vasque - Wear Test</label>
</RecordType>