force-app/main/default/objects/WT_Wear_Test__c/recordTypes/Wear_Team_Wear_Test.recordType-meta.xml
<RecordType>
    <fullName>Wear_Team_Wear_Test</fullName>
    <active>true</active>
    <description>Wear Team test record type</description>
    <label>Wear Team - Wear Test</label>
</RecordType>