force-app/main/default/objects/WT_Wear_Test__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type_of_Test__c</columns>
    <columns>Brand__c</columns>
    <columns>Category__c</columns>
    <columns>Test_Start_Date__c</columns>
    <columns>Test_End_Date__c</columns>
    <columns>Test_Status__c</columns>
    <columns>Test_Style__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Schedule_My_Check_in_Reminders__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>